feat: update popup to include stream selection for Lofi music

--- a/python/lofi-google-chrome-extension/popup.html
+++ b/python/lofi-google-chrome-extension/popup.html
@@ -8,7 +8,13 @@
 </head>
 <body>
           <h2>🎧 Lofi Playlist</h2>
-          <ul id="playlist"></ul>
+          <iframe id="lofiPlayer" src="" allow="autoplay; encrypted-media"></iframe>
+          <select id="streamSelector">
+          <option value="">-- Choose Stream --</option>
+          <option value="5qap5aO4i9A">LoFi Girl</option>
+          <option value="jfKfPfyJRdk">Beats to relax/study to</option>
+          <option value="IItQExvO_xM">LoFi Rain</option>
+          </select>
           <script src="popup.js"></script>
        
 </body>
