--- a/python/lofi-google-chrome-extension/popup.html
+++ b/python/lofi-google-chrome-extension/popup.html
@@ -7,12 +7,12 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-          <h2>🎧 Lofi Playlist</h2>
+          <h2>🎧 Lofi Player</h2>
           <iframe id="lofiPlayer" src="" allow="autoplay; encrypted-media"></iframe>
           <select id="streamSelector">
           <option value="">-- Choose Stream --</option>
-          <option value="5qap5aO4i9A">LoFi Girl</option>
-          <option value="jfKfPfyJRdk">Beats to relax/study to</option>
+          <option value="jfKfPfyJRdk">LoFi Girl</option>
+          <option value="4Q9jq-tdOoE">Lofi asian</option>
           <option value="IItQExvO_xM">LoFi Rain</option>
           </select>
           <script src="popup.js"></script>
