feat: rename extension and update manifest, add player.html and background.js for streaming functionality

--- a/python/lofi-google-chrome-extension/player.html
+++ b/python/lofi-google-chrome-extension/player.html
@@ -7,7 +7,7 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-          <h2>Lofi Vibe Radio 🎧✨</h2>
+          <h2>Lofi Vibe Radio</h2>
           <iframe id="lofiPlayer" src="" allow="autoplay; encrypted-media"></iframe>
           <select id="streamSelector">
           <option value="">-- Choose Stream --</option>
