feat: Change Vibe radio player and add Dockerfile

--- a/python/music-google-chrome-extension/player.html
+++ b/python/music-google-chrome-extension/player.html
@@ -7,13 +7,13 @@
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
-          <h2>Lofi Vibe Radio</h2>
-          <iframe id="lofiPlayer" src="" allow="autoplay; encrypted-media"></iframe>
+          <h2>Vibe Radio</h2>
+          <iframe id="Player" src="" allow="autoplay; encrypted-media"></iframe>
           <select id="streamSelector">
           <option value="">-- Choose Stream --</option>
-          <option value="jfKfPfyJRdk">LoFi Girl</option>
+          <option value="Dx5qFachd3A">Coffe & Jazz Radio</option>
           <option value="4Q9jq-tdOoE">Lofi asian</option>
-          <option value="IItQExvO_xM">LoFi Rain</option>
+          <option value="Rb0UmrCXxVA">Mozart for the mind</option>
           </select>
           <script src="popup.js"></script>
        
