feat: music player extension changes

--- a/python/music-google-chrome-extension/player.html
+++ b/python/music-google-chrome-extension/player.html
@@ -3,17 +3,17 @@
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Lofi playlist</title>
+     <title>Music Player</title>
      <link rel="stylesheet" href="style.css">
 </head>
 <body>
           <h2>Vibe Radio</h2>
-          <iframe id="Player" src="" allow="autoplay; encrypted-media"></iframe>
+          <iframe id="player" src="" allow="autoplay; encrypted-media"></iframe>
           <select id="streamSelector">
           <option value="">-- Choose Stream --</option>
           <option value="Dx5qFachd3A">Coffe & Jazz Radio</option>
           <option value="4Q9jq-tdOoE">Lofi asian</option>
-          <option value="Rb0UmrCXxVA">Mozart for the mind</option>
+          <option value="y6TZHLAzg5o">Classic Music for the mind</option>
           </select>
           <script src="popup.js"></script>
        
